Phase 3: Critical bug fixes and CI/CD integration
All 5 known Phase 2 limitations have been resolved:
- Secure Boot compatibility (prevents UEFI modification failures)
- HAP platform support validation (prevents bricking on older Intel CPUs)
- Enhanced GRUB safety with dry-run validation
- Kernel module conflict detection
- Backup registry race conditions (verified existing protection)

New Features:
- CLI-based agent architecture for scheduled scanning
- Offline audit caching and hardware-based agent ID
- GitHub Actions CI/CD workflow for hardware validation
- Secure Boot detection with pre-flight checks
- Platform generation detection (Skylake, Haswell, etc.)
- Enhanced GRUB backup with timestamped snapshots

Security Improvements:
- Prevents system bricking with comprehensive pre-flight checks
- Validates HAP bit support before Intel ME disable attempts
- Detects Secure Boot status and blocks incompatible operations
- Runtime kernel module conflict detection

Documentation:
- Created USAGE_EXAMPLES.md with comprehensive command examples
- Created PHASE3_SUMMARY.md with implementation details
- Updated README.md roadmap to show Phase 3 complete
- Added KNOWN_LIMITATIONS.md and FUTURE_ENHANCEMENTS.md
- All documentation reflects CLI-only architecture

Note: Web server components intentionally excluded - FirmwareGuard remains a CLI security tool.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ firmwareguard
 *.a
 *.so
 
+# Kernel module build artifacts
+*.ko
+*.mod
+*.mod.c
+.*.cmd
+Module.symvers
+modules.order
+
 # Editor files
 *.swp
 *.swo
